[코드 수정] 코드 수정본 올림

--- a/src/main/resources/templates/fragment/aside.html
+++ b/src/main/resources/templates/fragment/aside.html
@@ -6,7 +6,7 @@
 <aside class="sidebar" th:fragment="aside">
     <ul class="main-nav">
         <li class="main-nav--active">
-            <a class="main-nav__link" href="/index">
+            <a class="main-nav__link" href="/">
                 <span class="main-nav__icon"><i class="icon pe-7s-home"></i></span>
                 HOME <!--<span class="badge main-nav__badge badge--red">8</span>-->
             </a>
