--- a/src/main/resources/templates/mypage2.html
+++ b/src/main/resources/templates/mypage2.html
@@ -23,13 +23,13 @@
 						<div class="widget__content">
 							<input type="text"  style="font-size: 17px;border: none;margin-bottom: 9px;" th:value="${name}" id="resaBisName" readonly/>
 							<input type="text" class="input-text" id="bdNotice" placeholder="식당 공지사항" style="padding-left: 12px;"/>
-							<input type="text" class="input-text" id="bdPark" placeholder="주차 정보" style="padding-left: 12px;"/>
+							<textarea type="text" class="input-text" id="bdPark" placeholder="주차 정보" style="padding-left: 12px;"></textarea>
 							<input type="text" class="input-text" id="bdAddr" placeholder="상세주소"  style="    padding-left: 12px; margin-top: 10px;"/>
 							<input type="text" class="input-text" id="bdHp" placeholder="가게 전화번호"  style="    padding-left: 12px;"/>
 							<textarea type="text" class="input-text" id="bdIntro" placeholder="매장 소개"  style="    padding-left: 12px;"></textarea>
 							<textarea type="text" class="input-text" id="bdCaution" placeholder="유의사항"  style="    padding-left: 12px;"></textarea>
-							<input type="text" class="input-text" id="bdHour" placeholder="영업시간 안내"  style="    padding-left: 12px;"/>
-							<input type="text" class="input-text" id="bdHoliday" placeholder="휴무일"  style="    padding-left: 12px;"/>
+							<textarea type="text" class="input-text" id="bdHour" placeholder="영업시간 안내"  style="    padding-left: 12px;"></textarea>
+							<textarea type="text" class="input-text" id="bdHoliday" placeholder="휴무일"  style="    padding-left: 12px;"></textarea>
 							<input type="text" class="input-text" id="bdHomepage" placeholder="홈페이지"  style="    padding-left: 12px;"/>
 
 <!--						<textarea class="textarea" rows="6" placeholder="식당 소개" style="padding-left: 12px;"></textarea>-->
