--- a/src/main/resources/templates/reservation_cancel.html
+++ b/src/main/resources/templates/reservation_cancel.html
@@ -9,14 +9,14 @@
 <!-- header.html -->
 <div th:replace="fragment/header :: header"></div>
 <!-- header.html 끝-->
-	<div class="wrapper">
+<div class="wrapper">
 
-        <!-- aside.html 시작 -->
-        <div th:replace="fragment/aside :: aside"></div>
-        <!-- aside.html 끝 -->
-		
+    <!-- aside.html 시작 -->
+    <div th:replace="fragment/aside :: aside"></div>
+    <!-- aside.html 끝 -->
 
-		<section class="content">
+
+    <section class="content">
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
             <!-- Main Content -->
@@ -26,55 +26,58 @@
                 <div class="container-fluid">
                     <!-- Page Heading -->
                     <h1 class="h3 mb-2 text-gray-800" style="padding-bottom: 22px;
-                    font-weight: bold;">예약취소내역</h1>
-                    <!-- <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
-                        For more information about DataTables, please visit the <a target="_blank"
-                            href="https://datatables.net">official DataTables documentation</a>.</p>                            -->
-                            <div>
-                                <div style="text-align: right;
+                    font-weight: bold;">예약취소 및 노쇼내역</h1>
+                    <div>
+                        <div style="text-align: right;
                                 font-size: 22px;
                                 font-weight: bold;
                                 padding-bottom: 24px;
                                 color: #5a5c69;">
-                                    <button type="button" id="back" style="color: #5a5c69; text-decoration: none;">&lt;</button>
-                                    <a href="/reservationCalender" style="color: #5a5c69; text-decoration: none;"><span id="month"></span>월 <span id="day"></span>일</a>
-                                    <button type="button" id="front" style="color: #5a5c69; text-decoration: none;">&gt;</button>
-                            </div>
-                            </div>
-                            <div class="card shadow mb-4">
-                                <p>CANCEL</p>
-                                <div class="card-body" style="padding: 0 0 0 25px;">
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                            <tbody id="itemList1">
-                                                <tr v-for="dto in itemList1">
-                                                    <th style="border: none;">2</th>
-                                                    <td style="border: none;">{{dto.prName}}</td>
-                                                    <td style="border: none;">{{dto.resMonth}}월 {{dto.resDay}}일 {{dto.resTime}}시</td>
-                                                    <td style="border: none;">{{dto.visitHp}}</td>
-                                                    <td style="border: none;">{{dto.resStatus}}</td>
-                                                    <th style="border: none;">{{dto.resReason}}</th>
-                                                </tr>   
-                                            </tbody>
-                                        </table>
-                                       
-                                    </div>
-                                </div>
-                            </div>
+                            <button type="button" id="back" style="color: #5a5c69; text-decoration: none;">&lt;</button>
+                            <a href="/reservationCalender" style="color: #5a5c69; text-decoration: none;"><span
+                                    id="month"></span>월 <span id="day"></span>일</a>
+                            <button type="button" id="front" style="color: #5a5c69; text-decoration: none;">&gt;
+                            </button>
+                        </div>
+                    </div>
                     <div class="card shadow mb-4">
-                        <p>NOSHOW</p>
+                        <p style="font-size: 20px;font-weight: bold; padding: 8px;">CANCEL</p>
+                        <hr>
+                        <div class="card-body" style="padding: 0 0 0 25px;">
+                            <div class="table-responsive">
+                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                    <tbody id="itemList1">
+                                    <tr v-for="dto in itemList1">
+                                        <th style="border: none;">2</th>
+                                        <td style="border: none;">{{dto.prName}}</td>
+                                        <td style="border: none;">{{dto.resMonth}}월 {{dto.resDay}}일 {{dto.resTime}}시
+                                        </td>
+                                        <td style="border: none;">{{dto.visitHp}}</td>
+                                        <td style="border: none;">{{dto.resStatus}}</td>
+                                        <th style="border: none;">{{dto.resReason}}</th>
+                                    </tr>
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card shadow mb-4">
+                        <p style="font-size: 20px;font-weight: bold; padding: 8px;">NOSHOW</p>
+                        <hr>
                         <div class="card-body" style="padding: 0 0 0 25px;">
                             <div class="table-responsive">
                                 <table class="table table-bordered" width="100%" cellspacing="0">
                                     <tbody id="itemList2">
-                                        <tr v-for="dto in itemList2">
-                                            <th style="border: none;">2</th>
-                                            <td style="border: none;">{{dto.prName}}</td>
-                                            <td style="border: none;">{{dto.resMonth}}월 {{dto.resDay}}일 {{dto.resTime}}시</td>
-                                            <td style="border: none;">{{dto.visitHp}}</td>
-                                            <td style="border: none;">{{dto.resStatus}}</td>
-                                            <th style="border: none;">{{dto.resReason}}</th>
-                                        </tr>
+                                    <tr v-for="dto in itemList2">
+                                        <th style="border: none;">2</th>
+                                        <td style="border: none;">{{dto.prName}}</td>
+                                        <td style="border: none;">{{dto.resMonth}}월 {{dto.resDay}}일 {{dto.resTime}}시
+                                        </td>
+                                        <td style="border: none;">{{dto.visitHp}}</td>
+                                        <td style="border: none;">{{dto.resStatus}}</td>
+                                        <th style="border: none;">{{dto.resReason}}</th>
+                                    </tr>
                                     </tbody>
                                 </table>
 
@@ -87,27 +90,27 @@
             <!-- End of Main Content -->
         </div>
         <!-- End of Content Wrapper -->
-    </div>
-    <!-- End of Page Wrapper -->
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
+</div>
+<!-- End of Page Wrapper -->
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <a class="btn btn-primary" href="login.html">Logout</a>
             </div>
         </div>
     </div>
+</div>
 
 
 <!--footer.html 시작-->
@@ -115,8 +118,8 @@
 <!--footer.html 끝-->
 <script>
     let date = new Date();
-    let month = ("00"+(date.getMonth()+1).toString()).slice(-2);
-    let day = ("00"+(date.getDate()).toString()).slice(-2);
+    let month = ("00" + (date.getMonth() + 1).toString()).slice(-2);
+    let day = ("00" + (date.getDate()).toString()).slice(-2);
     let month1 = document.querySelector('#month');
     let day1 = document.querySelector('#day');
     month1.innerText = month;
@@ -127,29 +130,29 @@
     back.addEventListener('click', minus);
     front.addEventListener('click', plus);
 
-    function datelist(){
-        let month = ("00"+(date.getMonth()+1).toString()).slice(-2);
-        let day = ("00"+(date.getDate()).toString()).slice(-2);
+    function datelist() {
+        let month = ("00" + (date.getMonth() + 1).toString()).slice(-2);
+        let day = ("00" + (date.getDate()).toString()).slice(-2);
         month1.innerHTML = month;
         day1.innerHTML = day;
     }
 
-    function minus(){
-        date = new Date(date.setDate(date.getDate()-1));
-        datelist();
-        cancel();
-        noshow();
-    }
-    function plus(){
-        date = new Date(date.setDate(date.getDate()+1));
+    function minus() {
+        date = new Date(date.setDate(date.getDate() - 1));
         datelist();
         cancel();
         noshow();
     }
 
+    function plus() {
+        date = new Date(date.setDate(date.getDate() + 1));
+        datelist();
+        cancel();
+        noshow();
+    }
 
 
-    const { createApp } = Vue
+    const {createApp} = Vue
     let itemList1 = createApp({
         data() {
             return {
@@ -164,14 +167,15 @@
             }
         }
     }).mount('#itemList2');
-    window.onload = function(){
+    window.onload = function () {
         cancel();
         noshow();
     }
-        function cancel(){
+
+    function cancel() {
         let data1 = {
-            resMonth : month1.innerText,
-            resDay : day1.innerText
+            resMonth: month1.innerText,
+            resDay: day1.innerText
         }
         $.ajax({
             url: "/api/reservation/cancel",
@@ -180,7 +184,7 @@
             processData: true,
             contentType: "application/json; charset=UTF-8",
             data: data1,
-            success: function(result) {
+            success: function (result) {
                 if (result) {
                     console.log("완료");
                     itemList1.itemList1 = result.data;
@@ -188,14 +192,16 @@
                     alert("전송된 값 없음");
                 }
             },
-            error: function() {
+            error: function () {
                 alert("에러 발생");
             }
-        })};
-        function noshow(){
+        })
+    }
+
+    function noshow() {
         let data1 = {
-            resMonth : month1.innerText,
-            resDay : day1.innerText
+            resMonth: month1.innerText,
+            resDay: day1.innerText
         }
         $.ajax({
             url: "/api/reservation/noshow",
@@ -204,7 +210,7 @@
             processData: true,
             contentType: "application/json; charset=UTF-8",
             data: data1,
-            success: function(result) {
+            success: function (result) {
                 if (result) {
                     console.log("완료");
                     itemList2.itemList2 = result.data;
@@ -212,7 +218,7 @@
                     alert("전송된 값 없음");
                 }
             },
-            error: function() {
+            error: function () {
                 alert("에러 발생");
             }
         });
